src/test/deca/syntax/invalid/provided/chaine_incomplete.deca
// Description:
//    tests de programme incorrect lexicalement (chaine non terminee)
//
// Resultats:
//    ligne 10 : Erreur, chaine non terminee (sur fin de fichier)
//
// Historique:
//    cree le 21/04/2023

"chaine pas finie
